fixed white space on the right

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@ code {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 #modal {
